--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="addtocart" >Add To Cart</string>
     <string name="price_value" >$</string>
     <string name="gotocart" >Go To Cart</string>
+    <string name="outofstock" >Out Of Stock</string>
 
 
 </resources>
