--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,8 @@
     <string name="no_item_added">No Item Added</string>
     <string name="checkout">Checkout</string>
     <string name="chose" >Choose a photo of your product</string>
+    <string name="deletedSuccessFullyCartitem">Your Cart Item Deleted Successfully</string>
+    <string name="nomoreproduct">The number you requested is more than the number available</string>
 
 
 </resources>
