--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,8 +54,8 @@
     <string name="Compeleteprofile">Complete Profile </string>
     <string name="welcome">Welcome</string>
     <string name="add_product">Add Product</string>
-    <string name="Product_title">Product Title</string>
-    <string name="price">Product Price :</string>
+    <string name="Product_title">Product Title : </string>
+    <string name="price">Product Price : </string>
     <string name="product_desc">Product Description :</string>
     <string name="product_quantity">Product Quantity :</string>
     <string name="AddTitleProduct">Please Add title Your Product</string>
@@ -84,15 +84,16 @@
     <string name="successaddtocart">Product successfully added to cart</string>
     <string name="cart" >Cart</string>
     <string name="cartlist">Cart List</string>
-    <string name="subtotal">Subtotal :</string>
-    <string name="shiping_charge">Shipping Charge :</string>
+    <string name="subtotal">Subtotal : </string>
+    <string name="shiping_charge">Shipping Charge : </string>
     <string name="acount">Acount</string>
-    <string name="total_amount">Total Amount :</string>
+    <string name="total_amount">Total Amount : </string>
     <string name="no_item_added">No Item Added</string>
     <string name="checkout">Checkout</string>
     <string name="chose" >Choose a photo of your product</string>
     <string name="deletedSuccessFullyCartitem">Your Cart Item Deleted Successfully</string>
     <string name="nomoreproduct">The number you requested is more than the number available</string>
+    <string name="title_product">Title Product : </string>
 
 
 </resources>
