--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -114,6 +114,9 @@
     <string name="product_item">لیست کالا ها</string>
     <string name="PaymentMode">طریقه پرداخت</string>
     <string name="orderPlace">محل سفارش</string>
+    <string name="successAddingOrder">سفارش شما با موفقیت ارسال شد</string>
+    <string name="yourproductoutofstock">متاسفانه کالا های انتخابی موجودی ندارد</string>
+    <string name="failAddingOrder">متاسفانه سفارش کالا ارسال نشد لطفا دوباره تلاش کنید</string>
 
 
 </resources>
