add facebook athu for login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,8 @@
     <string name="tour_cart_main">Your Cart</string>
     <string name="tour_cart">Your shopping cart is waiting for the purchase to be finalized</string>
     <string name="addnewproduct_main">Add Your product For sell</string>
+    <string name="facebook_app_id" translatable="false">626846374938550</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb626846374938550</string>
 
 
 </resources>
