add google athu for login

--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -161,6 +161,8 @@
     <string name="tour_cart_main">سبد خرید شما</string>
     <string name="tour_cart">سبد خرید شما که برای نهایی شدن خرید منتظر است</string>
     <string name="addnewproduct_main">محصول خود را برای فروش اضافه کنید</string>
+    <string name="sds">585661446368-fehf19ukfh8omc564khpap26ar4jgbha.apps.googleusercontent.com</string>
+    <string name="deleteAcount">پاک کردن حساب کاربری</string>
 
 
 </resources>
