Random color for swiprefreshlayout 😍

--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -164,6 +164,7 @@
     <string name="sds">585661446368-fehf19ukfh8omc564khpap26ar4jgbha.apps.googleusercontent.com</string>
     <string name="deleteAcount">پاک کردن حساب کاربری</string>
     <string name="WaitToUpadteAndSendPicProduct">لطفا برای ارسال  مشخصات کالا منتظر بمانید </string>
+    <string name="English">English</string>
 
 
 </resources>
