--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
 
     <string name="ApiKey_google" translatable="false">AIzaSyBAWL7kLvkD61tcz3o2kXIJ_aR7mhBSFPY</string>
     <string name="title_activity_maps">Map</string>
+    <string name="The_displaye_location_is_correct">location is correct</string>
+    <string name="findlocation">Find My location</string>
 
 
 </resources>
