add chat with buyer and seller

--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -166,7 +166,8 @@
     <string name="WaitToUpadteAndSendPicProduct">لطفا برای ارسال  مشخصات کالا منتظر بمانید </string>
     <string name="English">English</string>
     <string name="The_displaye_location_is_correct">مکان من </string>
-    <string name="findlocation">Find My location</string>
+    <string name="findlocation">پیدا کردن مکان من</string>
+    <string name="Messages">پیام ها</string>
 
 
 </resources>
