--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,8 @@
     <string name="The_displaye_location_is_correct">location is correct</string>
     <string name="findlocation">Find My location</string>
     <string name="Messages">Messages</string>
+    <string name="lanquages">lanquages</string>
+    <string name="farsi">persian</string>
 
 
 </resources>
